# golobulus-rs

./: .gitignore  Cargo.toml  LICENSE.md  ReadMe.md
golob_lib/: Cargo.toml
golob_lib/src/: context.rs  errors.rs  event_loop.rs  lib.rs  numpy_helper.py  variant.rs
golob_lib/tests/: tests.rs
golob_lib/tests/resources/local_mods/: speaker.py
golob_lib/tests/resources/local_mods/deeper/: deepest.py
golob_playground/: Cargo.toml
golob_playground/src/: background_thread.rs  inputs_panel.rs  main.rs  util.rs
golob_plugin/: Cargo.toml  Justfile  build.rs
golob_plugin/pyo3_configs/: Golobulus.aex.manifest  aarch64-apple-darwin.cfg  x86_64-apple-darwin.cfg  x86_64-pc-windows-msvc.cfg
golob_plugin/src/: background_task.rs  error.rs  footage_utils.rs  idle_task.rs  instance.rs  lib.rs  param_util.rs  setup_env.rs  ui.rs
golobulus_examples/: basic.py  grayscale.py  pass_through.py  test.py
golobulus_examples/convolve/: convolve.py
golobulus_examples/opencv/: blob_detection.py
golobulus_examples/transformers/: depth_anything.py  requirements.txt
