[package]
name = "golob_lib"
version = "0.1.0"
edition = "2021"


[dependencies]
pyo3 = { version = "0.21.2" }
numpy = "0.21"
rayon = "1.10.0"
indexmap = "2.2.6"
bytemuck = "1.16.1"
thiserror = "1.0.61"


[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",
    "fast-rng",
]


[dev-dependencies]
image = "0.24.7"
