[package]
name = "golob_playground"
version = "0.1.0"
edition = "2021"


[dependencies]
golob_lib = { path = "../golob_lib" }
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [ "default_fonts", "glow"] }
egui_plot = "0.27.2"
log = "0.4"
env_logger = "0.10"
tinyfiledialogs = "3.9.1"
notify = "6.1.1"
image = "0.24.7"
egui_logger = "0.4.4"
