[package]
name = "golob_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
pipl = { git = "https://github.com/AdrianEddy/after-effects.git"  }

[dependencies]
after-effects = { git = "https://github.com/AdrianEddy/after-effects.git", rev = "ac731059" }
after-effects-sys =  { git = "https://github.com/AdrianEddy/after-effects.git" , rev="ac731059" }
golob_lib = { path = "../golob_lib" }
pathdiff = "0.2.1"
image = { version = "0.24.7", features = ["png", "exr"] }
bytemuck = "1.16.1"
dashmap = "6.0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
pretty-hex = "0.4"
win_dbg_logger = "0.1"
log-panics = "2.1"
rfd = "0.12.1"
homedir = "0.2.1"
env_logger = "0.11.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "std"] }
widestring = "1.0"
